# deezerclient

./: .gitignore  CMakeLists.txt  README.md
resources/: resources.qrc
src/: album.cpp  album.h  albumlistwidget.cpp  albumlistwidget.h  audioengine.cpp  audioengine.h  audioengine_output.cpp  audioengine_progressive.cpp  audioengine_queue.cpp  audioengine_stream.cpp  audioengine_visualization.cpp  audiosettingsdialog.cpp  audiosettingsdialog.h  blowfish_jukebox.cpp  blowfish_jukebox.h  deezerapi.cpp  deezerapi.h  deezerauth.cpp  deezerauth.h  discordmanager.cpp  discordmanager.h  lastfmapi.cpp  lastfmapi.h  lastfmsettingsdialog.cpp  lastfmsettingsdialog.h  lyricswidget.cpp  lyricswidget.h  lyricswindow.cpp  lyricswindow.h  main.cpp  mainwindow.cpp  mainwindow.h  playercontrols.cpp  playercontrols.h  playlist.cpp  playlist.h  playlistwidget.cpp  playlistwidget.h  projectmwidget.cpp  projectmwidget.h  (+25 more)
